--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
   <div class="wrap">
     <h1>Jason Werch — Instructional Design Portfolio</h1>
     <p class="tag">
-      Sample work in Rise 360 and Storyline 360 (LMS-ready, SCORM-friendly).
-      <br/>Focus: onboarding/implementation training, branching scenarios, and data-driven lessons.
+      Sample work in Rise 360 and Storyline 360.
+      <br/>
     </p>
   </div>
 </header>
@@ -75,7 +75,7 @@
       <span class="pill">Rise 360</span><span class="pill">Onboarding</span><span class="pill">Job aid</span>
     </div>
     <p style="margin:0 0 10px;">
-      A 5–10 minute readiness micro-module for new implementers with checklist steps, common errors, and knowledge checks.
+      A 5–10 minute readiness micro-module for Prevention Plus Wellness InShape prevention program implementers with checklist steps, common errors, and knowledge checks.
     </p>
     <p style="margin:0;">
       <a href="https://inshape-implementer-training.netlify.app" target="_blank" rel="noreferrer">Launch module</a>
@@ -83,12 +83,12 @@
   </div>
 
   <div class="card">
-    <h2 style="margin:0 0 6px;">2) Branching Scenario: Health Screening → Personalized Feedback</h2>
+    <h2 style="margin:0 0 6px;">2) Branching Scenario: Health Screening Questions → Personalized Feedback Videos</h2>
     <div class="meta">
       <span class="pill">Storyline 360</span><span class="pill">Branching</span><span class="pill">Feedback</span>
     </div>
     <p style="margin:0 0 10px;">
-      A branching interaction that adapts learner feedback based on responses to a health screening (SCORM-ready).
+      A branching interaction that adapts learner feedback based on responses to a health screening.
     </p>
     <p style="margin:0;">
       <a href="https://sportppw.netlify.app/story.html" target="_blank" rel="noreferrer">Launch scenario</a>
@@ -101,7 +101,7 @@
       <span class="pill">Rise 360</span><span class="pill">Data literacy</span><span class="pill">Canvas</span>
     </div>
     <p style="margin:0 0 10px;">
-      A 20–25 minute mini-lesson that refreshes monetary policy concepts, guides students through FRED charts, and culminates in a policy recommendation.
+      A 30-40 minute mini-lesson that refreshes monetary policy concepts, guides students through FRED charts, and culminates in a policy recommendation.
     </p>
     <p style="margin:0;">
       <a href="https://inflationvsinterestrates.netlify.app" target="_blank" rel="noreferrer">Launch lesson</a>
@@ -114,7 +114,7 @@
       <span class="pill">Canva</span><span class="pill">Workbook</span><span class="pill">Engagement</span>
     </div>
     <p style="margin:0 0 10px;">
-      A student-facing workbook designed in Canva to support fun, engaging, and print-friendly activities (layout, pacing, and visual hierarchy).
+      A student-facing workbook designed in Canva to support fun, engaging, and print-friendly activities.
     </p>
     <p style="margin:0;">
       <a href="healthy-lifestyles-workbook-high-school.pdf" target="_blank" rel="noreferrer">View workbook (PDF)</a>
