--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
   <title>Jason Werch | Instructional Design Portfolio</title>
   <style>
     :root{
+      /* Blue/gray (slate) theme */
       --bg:#f6f7f9;
       --card:#ffffff;
       --text:#0f172a;
       --muted:#475569;
       --border:rgba(15,23,42,.10);
       --shadow:0 10px 28px rgba(2,6,23,.10);
-      --teal:#0f766e;
-      --teal-dark:#0b5f59;
-      --link:#0b57d0;
+      --accent:#334155;      /* slate-700 */
+      --accent-dark:#1f2937; /* gray-800 */
+      --link:#2563eb;        /* blue-600 */
       --radius:16px;
     }
 
@@ -34,7 +35,7 @@
 
     /* HERO */
     .hero{
-      background: linear-gradient(135deg, var(--teal) 0%, var(--teal-dark) 100%);
+      background: linear-gradient(135deg, var(--accent) 0%, var(--accent-dark) 100%);
       color:#fff;
       border-radius: calc(var(--radius) + 6px);
       padding: 26px 22px;
@@ -49,7 +50,7 @@
       margin:0;
       color: rgba(255,255,255,.90);
       line-height: 1.45;
-      max-width: 72ch;
+      max-width: 78ch;
     }
     .hero .row{
       display:flex;
@@ -62,7 +63,7 @@
       padding:10px 14px;
       border-radius: 999px;
       text-decoration:none;
-      font-weight:600;
+      font-weight:700;
       font-size:14px;
       border:1px solid rgba(255,255,255,.28);
       color:#fff;
@@ -72,12 +73,12 @@
 
     .btn-primary{
       background:#ffffff;
-      color: var(--teal-dark);
+      color: var(--accent-dark);
       border-color: #ffffff;
     }
     .btn-primary:hover{ background: rgba(255,255,255,.92); }
 
-    /* SECTIONS */
+    /* SECTION TITLES */
     .section-title{
       margin: 22px 0 10px;
       display:flex;
@@ -116,14 +117,17 @@
     .card-inner{
       padding: 16px;
     }
-    .accent{
+
+    .accent-bar{
       height: 6px;
-      background: linear-gradient(90deg, var(--teal), #22c55e);
+      background: linear-gradient(90deg, var(--accent), rgba(37,99,235,.85));
     }
+
     .card h3{
       margin:0 0 6px;
       font-size: 17px;
     }
+
     .meta{
       display:flex;
       flex-wrap:wrap;
@@ -139,6 +143,7 @@
       background:#f8fafc;
       color:#0f172a;
     }
+
     .desc{
       margin: 0 0 10px;
       color: var(--muted);
@@ -157,24 +162,23 @@
       padding:9px 12px;
       border-radius: 10px;
       text-decoration:none;
-      font-weight:700;
+      font-weight:800;
       font-size: 13px;
       border:1px solid rgba(15,23,42,.12);
-      color: var(--teal-dark);
+      color: var(--accent-dark);
       background: #ffffff;
     }
-    .action:hover{
-      background:#f1f5f9;
-    }
+    .action:hover{ background:#f1f5f9; }
+
     .action.secondary{
       color: var(--link);
     }
 
-    /* OPTIONAL THUMBNAILS (leave empty for now) */
+    /* Thumbnail placeholder (optional) */
     .thumb{
       width:100%;
       height:140px;
-      background: linear-gradient(120deg, rgba(15,118,110,.18), rgba(34,197,94,.14));
+      background: linear-gradient(120deg, rgba(51,65,85,.18), rgba(37,99,235,.12));
       border-bottom: 1px solid var(--border);
     }
     .thumb-note{
@@ -204,7 +208,8 @@
     <section class="hero" id="top">
       <h1>Jason Werch — Instructional Design Portfolio</h1>
       <p>
-        Sample work in Rise 360 and Storyline 360. 
+        Sample work in Rise 360 and Storyline 360 (LMS-ready, SCORM-friendly). Focus: onboarding/implementation training,
+        branching scenarios, and data-driven lessons.
       </p>
 
       <div class="row">
@@ -217,15 +222,13 @@
     <!-- PROJECTS -->
     <div class="section-title" id="projects">
       <h2>Selected work</h2>
-      <div class="hint">2-column layout on desktop · buttons for key actions</div>
+      <div class="hint"></div>
     </div>
 
     <section class="grid">
       <!-- Card 1 -->
       <article class="card">
-        <div class="accent"></div>
-
-        <!-- Optional thumbnail placeholder -->
+        <div class="accent-bar"></div>
         <div class="thumb"></div>
         <div class="thumb-note">Optional: add a screenshot thumbnail later</div>
 
@@ -247,7 +250,7 @@
 
       <!-- Card 2 -->
       <article class="card">
-        <div class="accent"></div>
+        <div class="accent-bar"></div>
         <div class="thumb"></div>
         <div class="thumb-note">Optional: add a screenshot thumbnail later</div>
 
@@ -259,7 +262,7 @@
             <span class="pill">Feedback</span>
           </div>
           <p class="desc">
-            A branching interaction that adapts learner feedback based on responses to a health screening.
+            A branching interaction that adapts learner feedback based on responses to a health screening (SCORM-ready).
           </p>
           <div class="actions">
             <a class="action" href="https://sportppw.netlify.app/story.html" target="_blank" rel="noreferrer">Launch scenario</a>
@@ -269,7 +272,7 @@
 
       <!-- Card 3 -->
       <article class="card">
-        <div class="accent"></div>
+        <div class="accent-bar"></div>
         <div class="thumb"></div>
         <div class="thumb-note">Optional: add a screenshot thumbnail later</div>
 
@@ -290,9 +293,9 @@
         </div>
       </article>
 
-      <!-- Card 4 (Workbook as its own section/card) -->
+      <!-- Card 4 (Workbook) -->
       <article class="card">
-        <div class="accent"></div>
+        <div class="accent-bar"></div>
         <div class="thumb"></div>
         <div class="thumb-note">Optional: add a cover thumbnail later</div>
 
@@ -317,7 +320,7 @@
     <section class="contact" id="contact">
       <div class="section-title" style="margin-top:0;">
         <h2>Contact</h2>
-        <div class="hint"><a href="#top">Back to top</a></div>
+        <div class="hint"><a href="#top" style="color:var(--link);text-decoration:none;">Back to top</a></div>
       </div>
       <div class="line">
         Email: <a href="mailto:j.c.werch@gmail.com">j.c.werch@gmail.com</a><br/>
