--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@
       <!-- Card 1 -->
       <article class="card">
         <div class="accent-bar"></div>
-        <div class="thumb"></div>
-        <div class="thumb-note">Optional: add a screenshot thumbnail later</div>
+        <img class="thumb-img" src="thumb-rise.png" alt="Rise module thumbnail">
+
 
         <div class="card-inner">
           <h3>1) “Pre-Implementation Steps” Readiness Micro-Module</h3>
@@ -251,8 +251,8 @@
       <!-- Card 2 -->
       <article class="card">
         <div class="accent-bar"></div>
-        <div class="thumb"></div>
-        <div class="thumb-note">Optional: add a screenshot thumbnail later</div>
+        <img class="thumb-img" src="thumb-storyline.png" alt="Storyline scenario thumbnail">
+
 
         <div class="card-inner">
           <h3>2) Branching Scenario: Health Screening → Personalized Feedback</h3>
@@ -273,8 +273,9 @@
       <!-- Card 3 -->
       <article class="card">
         <div class="accent-bar"></div>
-        <div class="thumb"></div>
-        <div class="thumb-note">Optional: add a screenshot thumbnail later</div>
+        <img class="thumb-img" src="thumb-econ.png" alt="Economics lesson thumbnail">
+
+
 
         <div class="card-inner">
           <h3>3) Economics Mini-Lesson: Inflation &amp; Interest Rates (FRED Analysis + Policy)</h3>
@@ -296,8 +297,9 @@
       <!-- Card 4 (Workbook) -->
       <article class="card">
         <div class="accent-bar"></div>
-        <div class="thumb"></div>
-        <div class="thumb-note">Optional: add a cover thumbnail later</div>
+        <img class="thumb-img" src="thumb-workbook.png" alt="Workbook thumbnail">
+
+
 
         <div class="card-inner">
           <h3>4) Workbook Design Sample: Healthy Lifestyles (High School)</h3>
