--- a/index.html
+++ b/index.html
@@ -174,18 +174,14 @@
       color: var(--link);
     }
 
-    /* Thumbnail placeholder (optional) */
-    .thumb{
-      width:100%;
-      height:140px;
-      background: linear-gradient(120deg, rgba(51,65,85,.18), rgba(37,99,235,.12));
-      border-bottom: 1px solid var(--border);
-    }
-    .thumb-note{
-      font-size:12px;
-      color: rgba(15,23,42,.55);
-      padding: 10px 16px 0;
-    }
+    /* THUMBNAILS */
+.thumb-img{
+  width:100%;
+  height:160px;      /* change to 180px/200px if you want */
+  display:block;
+  object-fit:cover;  /* crops big screenshots nicely */
+  border-bottom: 1px solid var(--border);
+}
 
     /* CONTACT */
     .contact{
