--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
             and culminates in a policy recommendation.
           </p>
           <div class="actions">
-            <a class="action secondary" href="https://inflationvsinterestrates.netlify.app" target="_blank" rel="noreferrer">Launch lesson</a>
+            <a class="action" href="https://inflationvsinterestrates.netlify.app" target="_blank" rel="noreferrer">Launch lesson</a>
           </div>
         </div>
       </article>
