--- a/index.html
+++ b/index.html
@@ -204,8 +204,7 @@
     <section class="hero" id="top">
       <h1>Jason Werch — Instructional Design Portfolio</h1>
       <p>
-        Sample work in Rise 360 and Storyline 360 (LMS-ready, SCORM-friendly). Focus: onboarding/implementation training,
-        branching scenarios, and data-driven lessons.
+        Sample work in Rise 360 and Storyline 360. Instructional designer creating engaging, outcome-driven training.
       </p>
 
       <div class="row">
