--- a/index.html
+++ b/index.html
@@ -231,11 +231,11 @@
           <h3>1) “Pre-Implementation Steps” Readiness Micro-Module</h3>
           <div class="meta">
             <span class="pill">Rise 360</span>
-            <span class="pill">Onboarding</span>
-            <span class="pill">Job aid</span>
+            <span class="pill">Implementation Onboarding</span>
+            <span class="pill">Micro Learning</span>
           </div>
           <p class="desc">
-            A 5–10 minute readiness micro-module for new implementers with checklist steps, common errors, and knowledge checks.
+            A 5–10 minute readiness micro-module for new prevention program implementers with checklist steps, common errors, and knowledge checks.
           </p>
           <div class="actions">
             <a class="action" href="https://inshape-implementer-training.netlify.app" target="_blank" rel="noreferrer">Launch module</a>
@@ -254,10 +254,10 @@
           <div class="meta">
             <span class="pill">Storyline 360</span>
             <span class="pill">Branching</span>
-            <span class="pill">Feedback</span>
+            <span class="pill">Personalized Feedback</span>
           </div>
           <p class="desc">
-            A branching interaction that adapts learner feedback based on responses to a health screening (SCORM-ready).
+               Branching health-screening interaction that delivers tailored guidance based on learner responses.
           </p>
           <div class="actions">
             <a class="action" href="https://sportppw.netlify.app/story.html" target="_blank" rel="noreferrer">Launch scenario</a>
@@ -273,14 +273,14 @@
 
 
         <div class="card-inner">
-          <h3>3) Economics Mini-Lesson: Inflation &amp; Interest Rates (FRED Analysis + Policy)</h3>
+          <h3>3) Economics Mini-Lesson: Inflation &amp; Interest Rates</h3>
           <div class="meta">
             <span class="pill">Rise 360</span>
             <span class="pill">Data literacy</span>
-            <span class="pill">Canvas</span>
+            <span class="pill">Higher Ed</span>
           </div>
           <p class="desc">
-            A 20–25 minute mini-lesson that refreshes monetary policy concepts, guides students through FRED charts,
+            A 35-40 minute mini-lesson that refreshes monetary policy concepts, guides students through FRED charts,
             and culminates in a policy recommendation.
           </p>
           <div class="actions">
@@ -300,11 +300,11 @@
           <h3>4) Workbook Design Sample: Healthy Lifestyles (High School)</h3>
           <div class="meta">
             <span class="pill">Canva</span>
-            <span class="pill">Workbook</span>
-            <span class="pill">Engagement</span>
+            <span class="pill">Student Workbook</span>
+            <span class="pill">Activity Design</span>
           </div>
           <p class="desc">
-            Student-facing workbook designed in Canva to support fun, engaging, and print-friendly activities (layout, pacing, visual hierarchy).
+               Print-ready Canva workbook with engaging activities and clean, classroom-friendly layout.
           </p>
           <div class="actions">
             <a class="action" href="healthy-lifestyles-workbook-high-school.pdf" target="_blank" rel="noreferrer">View workbook (PDF)</a>
