--- a/index.html
+++ b/index.html
@@ -235,8 +235,9 @@
             <span class="pill">Micro Learning</span>
           </div>
           <p class="desc">
-            A 5–10 minute readiness micro-module for new prevention program implementers with checklist steps, common errors, and knowledge checks.
-          </p>
+            Problem: Inconsistent program delivery among decentralized implementers was leading to "program drift," which compromised the integrity of the data and diminished the overall impact of the substance prevention interventions.
+            Solution: Developed a standardized, asynchronous training suite that utilizes "locked-sequence" learning paths. This ensures every implementer masters core protocols and verifies their competency before being cleared for delivery. 
+            The Impact: Standardized the onboarding process for new implementers to ensure 100% alignment with program protocols before they reach the field.   </p>
           <div class="actions">
             <a class="action" href="https://inshape-implementer-training.netlify.app" target="_blank" rel="noreferrer">Launch module</a>
           </div>
@@ -273,15 +274,14 @@
 
 
         <div class="card-inner">
-          <h3>3) Economics Mini-Lesson: Inflation &amp; Interest Rates</h3>
+          <h3>3) Economics Data Literacy Module: Inflation &amp; Interest Rates</h3>
           <div class="meta">
             <span class="pill">Rise 360</span>
             <span class="pill">Data literacy</span>
             <span class="pill">Higher Ed</span>
           </div>
           <p class="desc">
-            A 35-40 minute mini-lesson that refreshes monetary policy concepts, guides students through FRED charts,
-            and culminates in a policy recommendation.
+            Demonstrates the ability to translate technical economic data into interactive, self-paced training for adult learners.
           </p>
           <div class="actions">
             <a class="action" href="https://inflationvsinterestrates.netlify.app" target="_blank" rel="noreferrer">Launch lesson</a>
