--- a/index.html
+++ b/index.html
@@ -234,10 +234,15 @@
             <span class="pill">Implementation Onboarding</span>
             <span class="pill">Micro Learning</span>
           </div>
-          <p class="desc">
-            Problem: Inconsistent program delivery among decentralized implementers was leading to "program drift," which compromised the integrity of the data and diminished the overall impact of the substance prevention interventions.
-            Solution: Developed a standardized, asynchronous training suite that utilizes "locked-sequence" learning paths. This ensures every implementer masters core protocols and verifies their competency before being cleared for delivery. 
-            The Impact: Standardized the onboarding process for new implementers to ensure 100% alignment with program protocols before they reach the field.   </p>
+        <p class="desc">
+  <strong>Problem:</strong> Inconsistent program delivery among decentralized implementers was leading to "program drift," which compromised the integrity of the data and diminished the overall impact of the substance prevention interventions.
+</p>
+<p class="desc">
+  <strong>Solution:</strong> Developed a standardized, asynchronous training suite that utilizes "locked-sequence" learning paths. This ensures every implementer masters core protocols and verifies their competency before being cleared for delivery. 
+</p>
+<p class="desc">
+  <strong>The Impact:</strong> Standardized the onboarding process for new implementers to ensure 100% alignment with program protocols before they reach the field.
+</p>
           <div class="actions">
             <a class="action" href="https://inshape-implementer-training.netlify.app" target="_blank" rel="noreferrer">Launch module</a>
           </div>
