--- a/index.html
+++ b/index.html
@@ -263,8 +263,14 @@
             <span class="pill">Personalized Feedback</span>
           </div>
           <p class="desc">
-               Branching health-screening interaction that delivers tailored guidance based on learner responses.
-          </p>
+      <strong>Problem:</strong> Standard "one-size-fits-all" wellness videos often lead to low engagement because the content isn't relevant to the individual’s specific health habits or risks.
+    </p>
+    <p class="desc">
+      <strong>Solution:</strong> Developed a branching health-screening interaction that delivers tailored guidance based on real-time learner responses. This creates a "Brief Intervention" model within the eLearning environment.
+    </p>
+    <p class="desc">
+      <strong>The Impact:</strong> Increased learner relevance by filtering out unnecessary content and providing a personalized action plan, improving the likelihood of post-training behavior change.
+    </p>
           <div class="actions">
             <a class="action" href="https://sportppw.netlify.app/story.html" target="_blank" rel="noreferrer">Launch scenario</a>
           </div>
@@ -286,8 +292,14 @@
             <span class="pill">Higher Ed</span>
           </div>
           <p class="desc">
-            Demonstrates the ability to translate technical economic data into interactive, self-paced training for adult learners.
-          </p>
+      <strong>Problem:</strong> Learners often struggle to connect abstract economic theories with real-world data, leading to a gap in practical financial decision-making skills.
+    </p>
+    <p class="desc">
+      <strong>Solution:</strong> Built an interactive module that guides users through live FRED data charts to analyze the relationship between inflation and interest rates, culminating in a data-driven policy recommendation.
+    </p>
+    <p class="desc">
+      <strong>The Impact:</strong> Successfully translated high-level financial concepts into an intuitive digital experience, demonstrating the ability to design training for technical subject matter experts.
+    </p>
           <div class="actions">
             <a class="action" href="https://inflationvsinterestrates.netlify.app" target="_blank" rel="noreferrer">Launch lesson</a>
           </div>
@@ -309,8 +321,14 @@
             <span class="pill">Activity Design</span>
           </div>
           <p class="desc">
-               Print-ready Canva workbook with engaging activities and clean, classroom-friendly layout.
-          </p>
+      <strong>Problem:</strong> Digital-only training can lack the "tactile" engagement needed for deep reflection and long-term retention during live workshops.
+    </p>
+    <p class="desc">
+      <strong>Solution:</strong> Designed a clean, print-ready participant workbook that mirrors digital content. The layout uses structured activities to guide learners through the "Screening and Brief Intervention" process.
+    </p>
+    <p class="desc">
+      <strong>The Impact:</strong> Provided a cohesive multi-modal learning experience that supports both independent study and classroom facilitation.
+    </p>
           <div class="actions">
             <a class="action" href="healthy-lifestyles-workbook-high-school.pdf" target="_blank" rel="noreferrer">View workbook (PDF)</a>
           </div>
