--- a/index.html
+++ b/index.html
@@ -321,10 +321,10 @@
             <span class="pill">Activity Design</span>
           </div>
           <p class="desc">
-      <strong>Problem:</strong> Digital-only training can lack the "tactile" engagement needed for deep reflection and long-term retention during live workshops.
+      <strong>Problem:</strong> Digital-only learning can lack the "tactile" engagement needed for deep reflection and long-term retention of information.
     </p>
     <p class="desc">
-      <strong>Solution:</strong> Designed a clean, print-ready participant workbook that mirrors digital content. The layout uses structured activities to guide learners through the "Screening and Brief Intervention" process.
+      <strong>Solution:</strong> Designed a clean, print-ready participant workbook that aids in reinforcing program goals. The layout uses structured activities to guide learners through the behavioral change process.
     </p>
     <p class="desc">
       <strong>The Impact:</strong> Provided a cohesive multi-modal learning experience that supports both independent study and classroom facilitation.
