--- a/index.html
+++ b/index.html
@@ -221,6 +221,35 @@
     </div>
 
     <section class="grid">
+            <!-- Card 1 (Grant Writing Series) -->
+      <article class="card">
+        <div class="accent-bar"></div>
+        <img class="thumb-img" src="thumb-grant.png" alt="Grant writing series thumbnail">
+
+        <div class="card-inner">
+          <h3>5) Grant Writing Series: Prevention Coalition Funding Pipeline</h3>
+          <div class="meta">
+            <span class="pill">Rise 360</span>
+            <span class="pill">Nonprofit Training</span>
+            <span class="pill">Workflow + Templates</span>
+          </div>
+
+          <p class="desc">
+            <strong>Problem:</strong> Small substance use prevention coalitions often do grant work in rushed bursts—searching is inconsistent, deadlines get lost, and time gets wasted on low-fit opportunities.
+          </p>
+          <p class="desc">
+            <strong>Solution:</strong> Built a step-by-step grant-writing series that turns prospecting into a repeatable weekly routine. Learners set up three saved searches, use a tracker to capture viable leads, and follow a 30-minute cadence that produces 2–3 fundable opportunities per week.
+          </p>
+          <p class="desc">
+            <strong>The Impact:</strong> Created a practical system that reduces missed deadlines and helps coalition leaders maintain a steady funding pipeline without needing a dedicated grant writer.
+          </p>
+
+          <div class="actions">
+            <a class="action" href="https://grant-writing-series.netlify.app" target="_blank" rel="noreferrer">Launch series</a>
+          </div>
+        </div>
+      </article>
+
       <!-- Card 1 -->
       <article class="card">
         <div class="accent-bar"></div>
